--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-Django==1.10.6
+certifi==2019.3.9
+chardet==3.0.4
+Django==1.11.11
 django-haystack==2.6.1
+django-js-asset==1.2.2
+idna==2.8
 jieba==0.38
 Markdown==2.6.8
+Pillow==6.0.0
 Pygments==2.2.0
 PyMySQL==0.9.3
 pytz==2016.10
+requests==2.21.0
+urllib3==1.24.1
 Whoosh==2.7.4
