--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 Django==1.11.11
 django-haystack==2.6.1
 django-js-asset==1.2.2
+gunicorn==19.9.0
 idna==2.8
 jieba==0.38
 Markdown==2.6.8
@@ -12,4 +13,5 @@ PyMySQL==0.9.3
 pytz==2016.10
 requests==2.21.0
 urllib3==1.24.1
+uWSGI==2.0.18
 Whoosh==2.7.4
