--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 certifi==2019.3.9
 chardet==3.0.4
 Django==1.11.11
+django-ckeditor==5.6.1
 django-haystack==2.6.1
 django-js-asset==1.2.2
+django-mdeditor==0.1.13
 gunicorn==19.9.0
 idna==2.8
 jieba==0.38
@@ -11,6 +13,7 @@ Pillow==6.0.0
 Pygments==2.2.0
 PyMySQL==0.9.3
 pytz==2016.10
+qiniu==7.2.2
 requests==2.21.0
 urllib3==1.24.1
 uWSGI==2.0.18
